@@ -1,5 +1,10 @@
 # $Id$
 
+2007-02-22	Konstantin V. Arkhipov
+
+	* main/DAOs/GenericDAO.class.php: field collisions in inherited
+	classes fixed.
+
 2007-02-20	Dmitry E. Demidov
 
 	* main/Containers/Unified/UnifiedContainer.class.php: sync list with
